--- a/src/css/all.css
+++ b/src/css/all.css
@@ -508,6 +508,27 @@ footer .right .work-hours p span:first-child {
 /* Responsive */
 
 @media screen and (max-width: 768px) {
+  footer .footer-wrap {
+    gap: 0;
+    grid-template-columns: 1fr;
+  }
+
+  footer .left,
+  footer .right {
+    text-align: left;
+    order: 1;
+    padding: 30px 0;
+  }
+
+  footer .middle {
+    order: 2;
+    text-align: left;
+    margin: 0 -30px;
+  }
+
+  footer .middle .social {
+    justify-content: left;
+  }
   header {
     padding: 0;
   }
