--- a/src/css/contact-us.css
+++ b/src/css/contact-us.css
@@ -76,6 +76,27 @@ h2.title {
 }
 
 @media screen and (max-width: 768px) {
+  footer .footer-wrap {
+    gap: 0;
+    grid-template-columns: 1fr;
+  }
+
+  footer .left,
+  footer .right {
+    text-align: left;
+    order: 1;
+    padding: 30px 0;
+  }
+
+  footer .middle {
+    order: 2;
+    text-align: left;
+    margin: 0 -30px;
+  }
+
+  footer .middle .social {
+    justify-content: left;
+  }
   .contact {
     grid-template-columns: 100%;
   }
@@ -85,7 +106,7 @@ h2.title {
   }
 
   .img {
-    height: 150px;
-    margin-top: 30px;
+    height: 250px;
+    margin-top: 40px;
   }
 }
