--- a/src/css/product.css
+++ b/src/css/product.css
@@ -295,7 +295,31 @@ body.ov {
   }
 }
 
-@media screen and (max-width: 468px) {
+@media screen and (max-width: 768px) {
+  footer .footer-wrap {
+    gap: 0;
+    grid-template-columns: 1fr;
+  }
+
+  footer .left,
+  footer .right {
+    text-align: left;
+    order: 1;
+    padding: 30px 0;
+  }
+
+  footer .middle {
+    order: 2;
+    text-align: left;
+    margin: 0 -30px;
+  }
+
+  footer .middle .social {
+    justify-content: left;
+  }
+  .contact {
+    grid-template-columns: 100%;
+  }
   .menu-list {
     grid-template-columns: 1fr;
     gap: 20px;
